--- a/projekt/projekt/Views/Meals/Create.cshtml
+++ b/projekt/projekt/Views/Meals/Create.cshtml
@@ -64,6 +64,7 @@
                     {
                         <tr>
                             <td style="width:20%!important">
+								    @*<input asp-for="@Model.PoDetails[i].ProductCode" class="form-control" />*@
                                 <select asp-for="@Model.Produkty[i].Nazwa" class="form-control" asp-items="ViewBag.ProduktyLista" onchange="FillValues(this);"></select>
                             </td>
                             <td class="wlasciwosclisty">
@@ -114,27 +115,27 @@
                             <input type="text" id="bialko_total" class="form-control form-control-plaintext" value="" />
                         </th>
 
-                        <th class="wlasciwosclisty">
-                            <input type="text" id="tluszcz_total" class="form-control form-control-plaintext" value="" />
-                        </th>
+                                 <th style="width:13%;">	
+                                     <input type="text" id="tluszcz_total" class="form-control form-control-plaintext" value="" />
+                                 </th>                  
+                                
+                                 <th style="width:13%;">	
+                                     <input type="text" id="weglo_total" class="form-control form-control-plaintext" value="" />
+                                 </th>					
 
-                        <th class="wlasciwosclisty">
-                            <input type="text" id="weglo_total" class="form-control form-control-plaintext" value="" />
-                        </th>
+                                 <th style="width:13%;">									
+                                    <input type="text" id="blonnik_total" class="form-control form-control-plaintext" value="" />
+                                 </th>					
+                                
+                                 <th style="width:9%;">                                      
+                                 </th>
+                            </tr>
+ 
+                            </thead>
+                        </table>
+                    
 
-                        <th class="wlasciwosclisty">
-                            <input type="text" id="blonnik_total" class="form-control form-control-plaintext" value="" />
-                        </th>
-
-                        <th style="width:9%;">
-                        </th>
-                    </tr>
-
-                </tbody>
-
-
-            </table>
-        </div>
+				</div>
 
 
 
@@ -202,23 +203,25 @@
                 return element.id == item.value;
             });
 
-            document.getElementById(id_kalorycznosc).value = kalorycznosc.kaloryczność;
-            document.getElementById(id_bialko).value = bialko.bialko;
-            document.getElementById(id_tluszcz).value = tluszcz.tluszcz;
-            document.getElementById(id_weglo).value = weglo.weglowodany;
-            document.getElementById(id_blonnik).value = blonnik.blonnik;
-            Calculate(item)
+        document.getElementById(id_kalorycznosc).value=kalorycznosc.kaloryczność;
+        document.getElementById(id_bialko).value=bialko.bialko;
+        document.getElementById(id_tluszcz).value=tluszcz.tluszcz;
+        document.getElementById(id_weglo).value=weglo.weglowodany;
+        document.getElementById(id_blonnik).value=blonnik.blonnik;    
+        return 
+      }
+
+      function Calculate(item){
+        
+        const regex = /\d+/;
+        const match = item.id.match(regex);
+        var number = 100;
+        if (match) {
+          number = parseInt(match[0]);     
+        } else {         
         }
-
-        function Calculate(item) {
-
-            const regex = /\d+/;
-            const match = item.id.match(regex);
-            var number = 100;
-            if (match) {
-                number = parseInt(match[0]);
-            } else {
-            }
+        var item2 = document.getElementById("Produkty_"+number+"__Nazwa")
+        FillValues(item2)
         var id_ilosc = "Ilosc_"+number+"_"
         var id_kalorycznosc = "Produkty_"+number+"__Kaloryczno__";
         var id_bialko = "Produkty_"+number+"__Bia_ko";
@@ -226,23 +229,23 @@
         var id_weglo = "Produkty_"+number+"__W_glowodany";
         var id_blonnik = "Produkty_"+number+"__B_onnik";
 
-            var ilosc = document.getElementById(id_ilosc).value;
-            if (ilosc == "") {
-                console.log("Jest puste")
-                return;
-            }
-            console.log("Nie Jest puste")
-
-            kalorycznosc = document.getElementById(id_kalorycznosc).value;
-            document.getElementById(id_kalorycznosc).value = (parseFloat(ilosc, 10) * parseFloat(kalorycznosc, 10) / 100).toFixed(2)
-            bialko = document.getElementById(id_bialko).value;
-            document.getElementById(id_bialko).value = (parseFloat(ilosc, 10) * parseFloat(bialko, 10) / 100).toFixed(2)
-            tluszcz = document.getElementById(id_tluszcz).value;
-            document.getElementById(id_tluszcz).value = (parseFloat(ilosc, 10) * parseFloat(tluszcz, 10) / 100).toFixed(2)
-            weglo = document.getElementById(id_weglo).value;
-            document.getElementById(id_weglo).value = (parseFloat(ilosc, 10) * parseFloat(weglo, 10) / 100).toFixed(2)
-            blonnik = document.getElementById(id_blonnik).value;
-            document.getElementById(id_blonnik).value = (parseFloat(ilosc, 10) * parseFloat(blonnik, 10) / 100).toFixed(2)
+        var ilosc = document.getElementById(id_ilosc).value;
+        if (ilosc == ""){
+        console.log("Jest puste")
+        return;
+        }
+        console.log("Nie Jest puste")
+        
+        var kalorycznosc  = document.getElementById(id_kalorycznosc).value;
+        document.getElementById(id_kalorycznosc).value = (parseFloat(ilosc, 10) * parseFloat(kalorycznosc, 10)/100).toFixed(2)
+        var bialko = document.getElementById(id_bialko).value;
+        document.getElementById(id_bialko).value = (parseFloat(ilosc, 10) * parseFloat(bialko, 10)/100).toFixed(2)
+        var tluszcz = document.getElementById(id_tluszcz).value;
+        document.getElementById(id_tluszcz).value = (parseFloat(ilosc, 10) * parseFloat(tluszcz, 10)/100).toFixed(2)
+        var weglo =  document.getElementById(id_weglo).value;
+        document.getElementById(id_weglo).value = (parseFloat(ilosc, 10) * parseFloat(weglo, 10)/100).toFixed(2)
+        var blonnik = document.getElementById(id_blonnik).value ;
+        document.getElementById(id_blonnik).value = (parseFloat(ilosc, 10) * parseFloat(blonnik, 10)/100).toFixed(2)
 
 
             CalcTotals()
@@ -329,15 +332,12 @@
 
 
                 if (document.getElementById(idOfIsDeleted).value != "true") {
+                    ilosc_total = parseFloat(ilosc_total, 10) + parseFloat(document.getElementById(id_ilosc).value, 10);
                     ilosc_kalorie = parseFloat(ilosc_kalorie, 10) + parseFloat(document.getElementById(id_kalorycznosc).value, 10);
                     ilosc_bialko = parseFloat(ilosc_bialko, 10) + parseFloat(document.getElementById(id_bialko).value, 10);
                     ilosc_tluszcz = parseFloat(ilosc_tluszcz, 10) + parseFloat(document.getElementById(id_tluszcz).value, 10);
-                    ilosc_weglowodany = parseFloat(ilosc_weglowodany, 10) + parseFloat(document.getElementById(id_weglo).value, 10);
-                    ilosc_blonnik = parseFloat(ilosc_blonnik, 10) + parseFloat(document.getElementById(id_blonnik).value, 10);
-
-                    ilosc_total = ilosc_total + eval(x[i].value)
-
-
+                    ilosc_weglowodany= parseFloat(ilosc_weglowodany, 10) + parseFloat(document.getElementById(id_weglo).value, 10);
+                    ilosc_blonnik= parseFloat(ilosc_blonnik, 10) + parseFloat(document.getElementById(id_blonnik).value, 10);             
                 }
             }
 
