ujednolicenie cedit i create

--- a/projekt/projekt/Views/Meals/Create.cshtml
+++ b/projekt/projekt/Views/Meals/Create.cshtml
@@ -155,11 +155,11 @@
         <div class="form-group btn-group col-12">
             <div class="col-1"></div>
             <div class="col-5">
-                <input type="submit" asp-action="Create" value="Create" class="btn btn-primary btn-block" />
+                <input type="submit" asp-action="Create" value="Stwórz" class="btn btn-primary btn-block" />
             </div>
             <div class="col-5">
                 <a class="btn btn-secondary btn-block" asp-action="MyMeals"
-                   asp-route-pg="@TempData.Peek("CurrentPage")">Back</a>
+                   asp-route-pg="@TempData.Peek("CurrentPage")">Anuluj</a>
             </div>
             <div class="col-1"></div>
         </div>
