Revert "Merge branch 'main' of https://github.com/w0jd/Porg-Bazy"
This reverts commit 691c0afa4b1be64a527ce8420f7243675e48a336, reversing
changes made to 74d3226ad80847c2cfe059539cce22e59cba7e49.

--- a/projekt/projekt/wwwroot/css/site.css
+++ b/projekt/projekt/wwwroot/css/site.css
@@ -24,11 +24,8 @@ footer {
     position:absolute;
     bottom: 0px!important;
     background:inherit;
-    padding:0.5em 5vw 0.5em 5vw!important;
+    padding:0.5em 0px 0.5em 0px!important;
     width: 100%;
-}
-footer p{
-    margin:0;
 }
 
 .list {
