--- a/projekt/projekt/Views/Meals/Edit.cshtml
+++ b/projekt/projekt/Views/Meals/Edit.cshtml
@@ -13,33 +13,30 @@
 
 <div class="card">
     <div class="card-header bg-success text-uppercase text-white text-center mb-2 pt-0" style="height:25px;">
-        <h6>Edytuj danie</h6>
+        <h6>Utwórz danie</h6>
     </div>
 
 
-
-    <form id="Edit-Meal" asp-action="Create">
-
+    <form asp-action="Create">
 
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 
-
-        <label asp-for="NazwaDania" class="control-label">Nazwa Dania</label>
-
+        <label asp-for="NazwaDania" class="control-label"></label>
 
         <input asp-for="NazwaDania" class="form-control" />
         
         <input type="hidden" class="form-control" asp-for="Id">
 
 
-        <div class="edit-table">
+
+        <div class="col-12 ml-5">
             <table id="TabelaGlowna" class="table table-borderless table-sm mb-0 pb-0">
                 <thead>
                     <tr>
                         <th>
-                            Nazwa Produktu
+                            Nazwa
                         </th>
                         <th>
                             Ilość[g/ml]
@@ -61,7 +58,7 @@
                         </th>
                         <th style="width:60px;">
                             <button id='btnAddDetailRow' type="button" class="btn btn-sm btn-secondary visible" onclick="AddItem(this)">
-                                Dodaj
+                                Add
                             </button>
                         </th>
                     </tr>
@@ -100,12 +97,11 @@
                             </td>
                             <td style="width:60px;">
                                 <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="DeleteItem(this)">
-                                    Usuń
+                                    Delete
                                 </button>
                             </td>
                         </tr>
                     }
-
 
                     <table class="table table-sm mb-0 pb-0 border">
                         <thead>
@@ -158,7 +154,6 @@
 
 
 
-
         </div>
 
 
@@ -194,7 +189,6 @@
 
         function Aktualizuj() {
             
-
             var x = document.getElementsByClassName('ilosc_class');
             console.log(x.length);
             var i;
@@ -231,7 +225,6 @@
           }
          
 
-
         function FillValues(item) {
             console.log("FillValueItem")
             const regex = /\d+/;
@@ -239,7 +232,7 @@
             var number = 100;
             if (match) {
                 number = parseInt(match[0]);
-            } else { 
+            } else {
             }
 
             
@@ -343,9 +336,9 @@
             var table;
             table = document.getElementById('TabelaGlowna');
             var rows = table.getElementsByTagName('tr');
-            var rowOuterHtml = rows[rows.length - 2].outerHTML;
+            var rowOuterHtml = rows[rows.length - 1].outerHTML;
 
-            var lastrowIdx = rows.length - 3;
+            var lastrowIdx = rows.length - 2;
 
             var nextrowIdx = eval(lastrowIdx) + 1;
 
@@ -353,7 +346,7 @@
             rowOuterHtml = rowOuterHtml.replaceAll('[' + lastrowIdx + ']', '[' + nextrowIdx + ']');
             rowOuterHtml = rowOuterHtml.replaceAll('-' + lastrowIdx, '-' + nextrowIdx);
 
-            var newRow = table.insertRow(nextrowIdx + 1);
+            var newRow = table.insertRow();
             newRow.innerHTML = rowOuterHtml;
 
             var x = document.getElementsByTagName("INPUT");
@@ -422,7 +415,6 @@
 
             return;
         }
-
     </script>
 
-    }
+}
