--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
                                 <div id="li-exp">
                                 <ul class="list">
                                     <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="MyMeals">Moje</a></li>
+                                    <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="Create">Dadaj posiłek</a></li>
                                     <li><a class="nav-link text-black" asp-area="" asp-controller="Meals" asp-action="Products">Produkty</a></li>
                                 </ul>
                                 </div>
@@ -148,9 +149,9 @@
         
     </script>
     <footer class="border-top footer text-muted">
-        <p>
+        <div class="container">
             &copy; 2023 - projekt - <a asp-area="" asp-controller="Home" asp-action="Privacy">Informacje</a>
-        </p>
+        </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
