--- a/projekt/projekt/Views/Meals/Create.cshtml
+++ b/projekt/projekt/Views/Meals/Create.cshtml
@@ -161,18 +161,18 @@
 
 
 
-       
-         <div class="form-group btn-group col-12">
-                <div class="col-1"></div>
-                <div class="col-5">
-                <input type="submit" asp-action="Create" value="Create" class="btn btn-primary btn-block" onclick="Aktualizuj()" />
-                </div>           
-                <div class="col-5">
-                    <a class="btn btn-secondary btn-block" asp-action="MyMeals"
-                       asp-route-pg="@TempData.Peek("CurrentPage")">Back</a>
-                </div>     
-                <div class="col-1"></div>
-         </div>
+
+        <div class="form-group btn-group col-12">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <input type="submit" asp-action="Create" value="Stwórz" class="btn btn-primary btn-block" onclick="Aktualizuj()" />
+            </div>
+            <div class="col-5">
+                <a class="btn btn-secondary btn-block" asp-action="MyMeals"
+                   asp-route-pg="@TempData.Peek("CurrentPage")">Anuluj</a>
+            </div>
+            <div class="col-1"></div>
+        </div>
 
 
 
